--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://seinjone:seinjone@cluster0.ifkj8ma.mongodb.net/test"
-NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
-NEXTAUTH_SECRET="NEXT-SECRET"
+DATABASE_URL=""
+NEXTAUTH_JWT_SECRET=""
+NEXTAUTH_SECRET=""
 
-GITHUB_ID=a43619c9d83064b4fca9 
-GITHUB_SECRET=46a4b4adadaf5254f56bfaeb8f12a1371b029370
+GITHUB_ID=
+GITHUB_SECRET=
 
-GOOGLE_CLIENT_ID=397750571149-2k4b124uougugrgsrbc7hgnetggdt4ms.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
